[gd_scene load_steps=10 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/equation_side_buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Caladea-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gui/main.gd" type="Script" id=4]
[ext_resource path="res://gui/equation_side_molecules.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/new_styleboxflat.tres" type="StyleBox" id=6]
[ext_resource path="res://gui/Popup.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/resultats.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screen" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1018.0
margin_bottom = 596.0
custom_constants/separation = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equation_panels" type="HBoxContainer" parent="screen"]
margin_right = 1012.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="left_molecules" parent="screen/equation_panels" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 456.0
margin_bottom = 90.0

[node name="equation_center" type="RichTextLabel" parent="screen/equation_panels"]
margin_left = 460.0
margin_right = 551.0
margin_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
hint_tooltip = "Cette flèche symbolise que les réactifs (à gauche) vont disparaitre pour devenir les produits (à droite)."
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] -> [/center]
"
text = " -> 
"
fit_content_height = true
scroll_active = false

[node name="right_molecules" parent="screen/equation_panels" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 555.0
margin_right = 1012.0
margin_bottom = 90.0
hint_tooltip = "Ce côté de l'équation est celui des produits, ce sont les molécules qui vont aparaître pendant la réaction chimique."

[node name="interactif" type="HBoxContainer" parent="screen"]
margin_top = 97.0
margin_right = 1012.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_side" parent="screen/interactif" instance=ExtResource( 2 )]
margin_right = 504.0
margin_bottom = 96.0

[node name="rajouter_molecule" parent="screen/interactif/left_side/VBoxContainer" index="0"]
margin_right = 504.0
margin_bottom = 27.0
hint_tooltip = "Clique pour rajouter une molécule à gauche de l'équation."

[node name="expliquer" parent="screen/interactif/left_side/VBoxContainer" index="1"]
margin_top = 31.0
margin_right = 504.0
margin_bottom = 58.0
hint_tooltip = "Ce bouton permet d'expliquer le côté des réactifs."

[node name="right_side" parent="screen/interactif" instance=ExtResource( 2 )]
margin_left = 508.0
margin_right = 1012.0
margin_bottom = 96.0

[node name="rajouter_molecule" parent="screen/interactif/right_side/VBoxContainer" index="0"]
margin_right = 504.0
margin_bottom = 27.0
hint_tooltip = "Clique pour rajouter une molécule à droite de l'équation."

[node name="expliquer" parent="screen/interactif/right_side/VBoxContainer" index="1"]
margin_top = 31.0
margin_right = 504.0
margin_bottom = 58.0
hint_tooltip = "Ce bouton permet d'expliquer le côté des produits."

[node name="resultats" parent="screen" instance=ExtResource( 8 )]
margin_top = 200.0
margin_right = 1012.0
margin_bottom = 520.0

[node name="dead_space" type="HBoxContainer" parent="screen"]
margin_top = 527.0
margin_right = 1012.0
margin_bottom = 592.0
size_flags_horizontal = 15
size_flags_vertical = 15
size_flags_stretch_ratio = 0.2

[node name="OptionButton" type="OptionButton" parent="screen/dead_space"]
margin_right = 334.0
margin_bottom = 65.0
hint_tooltip = "Ce bouton sert à changer de mode, les modes disponibles servent à éditer l'équation ou à la comprendre."
size_flags_horizontal = 15
size_flags_vertical = 15
custom_styles/focus = ExtResource( 6 )
toggle_mode = false
text = "je suis en train d'éditer l'équation"
flat = true
align = 1
items = [ "je suis en train d'éditer l'équation", null, false, 0, null, "je veux voir une explication de l'équation", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retour_menu" type="Button" parent="screen/dead_space"]
margin_left = 338.0
margin_right = 673.0
margin_bottom = 65.0
hint_tooltip = "Ce bouton sert à changer de mode, les modes disponibles servent à éditer l'équation ou à la comprendre."
size_flags_horizontal = 15
size_flags_vertical = 15
custom_styles/focus = ExtResource( 6 )
text = "Retourner au menu"
flat = true

[node name="show" type="Button" parent="screen/dead_space"]
margin_left = 677.0
margin_right = 1012.0
margin_bottom = 65.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 15
size_flags_vertical = 15
text = "montrer les résultats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" parent="." instance=ExtResource( 7 )]

[node name="Label" parent="Popup" index="0"]
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
[connection signal="item_selected" from="screen/dead_space/OptionButton" to="." method="_on_OptionButton_item_selected"]

[editable path="screen/interactif/left_side"]

[editable path="screen/interactif/right_side"]

[editable path="Popup"]
